* vismodel() returns error if bkg=NULL
* getspec() patched to stop returning warnings in Yosemite


NEW FUNCTIONS:

* projpoints() allows the plotting of points in a projplot() figure
* fgetspec() faster (~5-10X), but less flexible, version of getspec() for cases in which similar file types are to be imported (e.g., all Avantes or Ocean Optics)

pavo 0.5-1
------------------------------------------------------------------------------
MINOR FEATURES AND BUG FIXES
* vismodel() accepts matrix, data.frame or rspec objects for the illuminant, updated warning messages associated with this use
* vismodel() accepts user-defined achromatic receptors
* tcsplot(), tcsvol() & tcspoints(): transparency control passed to user
* getspec() works with OceanView files

pavo 0.5
------------------------------------------------------------------------------

* updated citation()

MINOR FEATURES AND BUG FIXES
* vismodel() vonkries = TRUE does not return a NULL result
* vismodel() works with a single spectrum object
* tcsplot() allows greater control of tetrahedron appearance
* summary.rspec() allows for user-defined minimum wavelength (for calculation of UV variables)

pavo 0.3-1
------------------------------------------------------------------------------
NEW FUNCTIONS

* irrad2flux() and flux2irrad() to convert illuminant measurements

MINOR FEATURES AND BUG FIXES

* vismodel() less cryptic error messages
* as_rspec() fix message pertaining wavelength column
* getspec() now removes empty columns (generated by bad tabulation)
* plot.rspec() fix color labeling issue (previously, when user specified fewer colors than number of spectra, 'stack' and 'overlay' colored spectra differently)

pavo 0.3
------------------------------------------------------------------------------
NEW FUNCTIONS

* subset() class methods for rspec, vismodel and tcs
* summary() method for vismodel, returns attributes used in visual model

VISUAL MODEL
