@@ -82,6 +82,7 @@ Collate:
     'trispace.R'
     'triplot.R'
     'vismodel.R'
+    'vol.R'
     'voloverlap.R'
     'summary.colspace.R'
     'projpoints.R'
