@@ -49,6 +49,7 @@ export(trispace)
 export(ttvertex)
 export(vismodel)
 export(vissyst)
+export(vol)
 export(voloverlap)
 import(geometry)
 import(mapproj)
