@@ -7,7 +7,7 @@
 #' @rdname tcsplot
 #' 
 
-tcsvol <- function(tcsdata, static = TRUE, col = 'black', alpha = 0.2, 
+tcsvol <- function(tcsdata, col = 'black', alpha = 0.2, 
                      grid.alpha = 1, grid = T, fill = T, lwd = 1){
   
   if(attr(tcsdata, 'clrsp') != 'tcs') stop("object is not in tetrahedral color space")
@@ -17,42 +17,6 @@ tcsvol <- function(tcsdata, static = TRUE, col = 'black', alpha = 0.2,
   coords <- tcsdata[, c('x', 'y', 'z')]
   listvol <- split(vol, rep(1:ncol(vol), each = nrow(vol)))
   ppairs <- do.call(rbind, lapply(listvol, function(x)t(combn(x, 2))))
-  
-  
-  # STATIC
-  if(static){
-  last_tetraplot <- get("last_plot.tetra", envir = .PlotTetraEnv)
-  
-  flatcoords <- data.frame(last_tetraplot$xyz.convert(coords))
-  
-  if(is.character(col))
-    col <- rgb(t(col2rgb(col)), alpha=grid.alpha*255, maxColorValue=255) 
-  
-  if(grid){
-  for(i in 1:nrow(ppairs)){
-  	segments(flatcoords[ppairs[i,1], 'x'], flatcoords[ppairs[i,1], 'y'],
-  	         flatcoords[ppairs[i,2], 'x'], flatcoords[ppairs[i,2], 'y'],
-  	         color=col, lwd=lwd) 
-  }
-  }
-  
-  if(fill){
-    if(is.character(col))
-      fillcol <- rgb(t(col2rgb(col)), alpha=alpha*255, maxColorValue=255) 
-
-  	for(i in 1:ncol(vol)){
-  		polygon(flatcoords[vol[,i],'x'], flatcoords[vol[,i],'y'], col=fillcol)
-  	}
-  }
-  
-  }
-  
-  
-  # load RGL, and attempt install if not found
-  #loadrgl()
-  
-  # INTERACTIVE
-  if(!static){
   
   if(!isNamespaceLoaded("rgl"))
     requireNamespace("rgl")
@@ -72,6 +36,4 @@ tcsvol <- function(tcsdata, static = TRUE, col = 'black', alpha = 0.2,
     alpha = alpha, color = col)
     
   rgl::material3d(alpha = 1)
-  
-  }
 }
